Added speech notices to home pages.
Closes SailScores/SailScores#54
Closes SailScores/SailScores#236
Closes SailScores/SailScores#235
Closes SailScores/SailScores#234

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -4,37 +4,57 @@
 }
 <div class="col-lg-9">
     <h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
-    <h3>
-        January 1st, 2021
-    </h3>
-    <h5>Happy New Year!</h5>
-    <p>
-        New <a href="https://www.sailing.org/documents/racingrules/index.php" target="_blank">
-            Racing
-            Rules of Sailing (RRS)
-        </a> became effective today, January 1. There are a couple of minor
-        changes to scoring in the new rules. SailScores has been updated to be in compliance
-        with the new rules.
-        <ul>
-            <li>
-                <strong>New Score Code: <em>NSC</em>: Did not sail the course.</strong> This
-                code may be used by the race committee that observed a boat not completing the course
-                correctly. Previously, the Race Committee needed to either protest the boat
-                or score them as DNF: did not finish. From a scoring perspective, this code
-                is treated the same as "DNF."
-                SailScores' scoring systems now have <em>NSC</em> as a scoring code.
-            </li>
-            <li>
-                <strong>Series scoring rule A9 becomes rule 5.3 and has been slightly reworded.</strong>
-                Previously rule A9 described how scoring could be changed for a "series longer
-                than a regatta." This rule has been moved to A5.3, and now indicates that the
-                Sailing Instructions must state that rule A5.3 will apply to be in effect. To
-                accommodate this, SailScores default scoring system is now called "Appendix A
-                For Series - Rule 5.3"
-            </li>
-        </ul>
-    </p>
-    <br />
+<h3>
+    October 21st, 2021
+</h3>
+<h5>&#127875;</h5>
+<p>
+    This past season we've been testing a feature near the core of SailScores' goal:
+    allowing results to be entered and shared as fast as possible. This has turned
+    out to be one of the places where speech recognition can speed things up 
+    quite a bit.
+</p>
+<p>
+    So we did it. SailScores result entry now supports speech recognition, both on laptops
+    as well as mobile devices. If you are interested in trying this out,
+    <a href="mailto:info@sailscores.com">contact us</a> to enable this feature for your club.
+</p>
+<p>
+    The speech recognition is focused on sail numbers and skipper names, and requires an
+    internet connection to work. If this becomes popular, we'll come up with a way to share
+    the service costs for those that are using it.
+</p>
+<br />    <h3>
+    January 1st, 2021
+</h3>
+<h5>Happy New Year!</h5>
+<p>
+    New <a href="https://www.sailing.org/documents/racingrules/index.php" target="_blank">
+        Racing
+        Rules of Sailing (RRS)
+    </a> became effective today, January 1. There are a couple of minor
+    changes to scoring in the new rules. SailScores has been updated to be in compliance
+    with the new rules.
+    <ul>
+        <li>
+            <strong>New Score Code: <em>NSC</em>: Did not sail the course.</strong> This
+            code may be used by the race committee that observed a boat not completing the course
+            correctly. Previously, the Race Committee needed to either protest the boat
+            or score them as DNF: did not finish. From a scoring perspective, this code
+            is treated the same as "DNF."
+            SailScores' scoring systems now have <em>NSC</em> as a scoring code.
+        </li>
+        <li>
+            <strong>Series scoring rule A9 becomes rule 5.3 and has been slightly reworded.</strong>
+            Previously rule A9 described how scoring could be changed for a "series longer
+            than a regatta." This rule has been moved to A5.3, and now indicates that the
+            Sailing Instructions must state that rule A5.3 will apply to be in effect. To
+            accommodate this, SailScores default scoring system is now called "Appendix A
+            For Series - Rule 5.3"
+        </li>
+    </ul>
+</p>
+<br />
     <h3>
         December 23rd, 2020
     </h3>
