--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -13,19 +13,22 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <picture class="d-block w-100">
-                        <source srcset="images/TypiqueSeries.webp" type="image/webp" class="d-block w-100">
+                        <source srcset="images/TypiqueSeries_343.webp 1x, images/TypiqueSeries.webp"
+                                type="image/webp" class="d-block w-100">
                         <img src="/images/TypiqueSeries.png" alt="Series results" class="d-block w-100">
                     </picture>
                 </div>
                 <div class="carousel-item">
                     <picture>
-                        <source srcset="images/TypiqueRaceEntry.webp" type="image/webp" class="d-block w-100">
+                        <source srcset="images/TypiqueRaceEntry_343.webp 1x, images/TypiqueRaceEntry.webp"
+                                type="image/webp" class="d-block w-100">
                         <img src="/images/TypiqueRaceEntry.png" alt="Results entry" class="d-block w-100">
                     </picture>
                 </div>
                 <div class="carousel-item">
                     <picture class="d-block w-100">
-                        <source srcset="images/TypiqueMainPage.webp" type="image/webp" class="d-block w-100">
+                        <source srcset="images/TypiqueMainPage_343.webp 1x, images/TypiqueMainPage.webp"
+                                type="image/webp" class="d-block w-100">
                         <img src="/images/TypiqueMainPage.png" alt="Club main page" class="d-block w-100">
                     </picture>
                 </div>
@@ -53,7 +56,8 @@
     <div class="col-md-4 order-md-5">
         <h4>What's important in sailing club scoring software?</h4>
         <ul>
-            <li>Fast, simple result entry and sharing using the web.</li>
+            <li>Fast, simple result entry and sharing using the web. Optional speech
+                recognition to make things really easy.</li>
             <li>Support for Appendix A Low Point Scoring including 2021-2024 codes,
                 High Point Percentage, and customized club systems and codes.
             </li>
@@ -61,7 +65,7 @@
             <li>Competitor statistics across multiple series.</li>
             <li>Count a single race in multiple series.</li>
             <li>Automatically collect and share weather information.</li>
-            <li>Phone friendly, for scorekeepers as well as racers.</li>
+            <li>Laptop and phone friendly, for scorekeepers as well as racers.</li>
         </ul>
     </div>
 </div>
