--- a/SailScores.Web/Views/Announcement/Edit.cshtml
+++ b/SailScores.Web/Views/Announcement/Edit.cshtml
@@ -8,15 +8,15 @@
 <h2>Edit Notice</h2>
 <hr />
 <div class="row">
-    <div class="col-lg-4 col-md-8">
+    <div class="col-lg-6 col-md-8">
         <form asp-action="Edit"
               asp-route-returnurl="@ViewData["ReturnUrl"]">
             <input type="hidden" id="regattaId" asp-for="RegattaId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                
-                <textarea asp-for="Content" class="form-control" ></textarea>
+
+                <textarea asp-for="Content" class="form-control" id="summernote" rows="4"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,4 +40,20 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#summernote').summernote({
+                toolbar: [
+                    ['style', ['style']],
+                    ['font', ['bold', 'italic', 'underline', 'strikethrough', 'clear']],
+                    ['para', ['ul', 'ol', 'paragraph']],
+                    ['table', ['table']],
+                    ['insert', ['link', 'picture']],
+                    ['view', ['codeview', 'help']],
+                ]
+            });
+        });
+    </script>
 }
