--- a/SailScores.Web/Views/Announcement/Create.cshtml
+++ b/SailScores.Web/Views/Announcement/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Add a Notice</h2>
 <hr />
 <div class="row">
-    <div class="col-lg-4 col-md-8">
+    <div class="col-lg-6 col-md-8">
         <form asp-action="Create"
               asp-route-returnurl="@ViewData["ReturnUrl"]">
             <input type="hidden" id="regattaId" asp-for="RegattaId" />
@@ -17,7 +17,7 @@
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
                 
-                <textarea asp-for="Content" class="form-control" ></textarea>
+                <textarea asp-for="Content" class="form-control" id="summernote" rows="4" ></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,6 +42,22 @@
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script>
         document.getElementById("timeOffset").value = (new Date()).getTimezoneOffset();
+    </script>
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.20/dist/summernote-bs4.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.20/dist/summernote-bs4.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#summernote').summernote({
+                toolbar: [
+                    ['style', ['style']],
+                    ['font', ['bold', 'italic', 'underline', 'strikethrough', 'clear']],
+                    ['para', ['ul', 'ol', 'paragraph']],
+                    ['table', ['table']],
+                    ['insert', ['link', 'picture']],
+                    ['view', ['codeview', 'help']],
+                ]
+            });
+        });
     </script>
 
 }
