--- a/SailScores.Web/Views/Regatta/Create.cshtml
+++ b/SailScores.Web/Views/Regatta/Create.cshtml
@@ -10,7 +10,7 @@
 <h4>Regatta</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 col-lg-6">
         <p>Regattas are sailing events held over a few days with the same competitors, unlike 
         <a asp-controller="Series" asp-action="Create">series</a> which usually occur over
         multiple weeks with varying competitors. Regattas will be shared on the front page
@@ -19,7 +19,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 col-lg-6">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -29,6 +29,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Url" class="control-label"></label>
+                <a class="text-primary"
+                   data-container="body"
+                   data-toggle="popover"
+                   data-placement="top"
+                   data-trigger="focus hover"
+                   data-content="If there is another site with regatta information, enter the URL here.">
+                    <span class="far fa-question-circle"></span>
+                </a>
                 <input asp-for="Url" class="form-control" />
                 <span asp-validation-for="Url" class="text-danger"></span>
             </div>
@@ -49,7 +57,14 @@
             </div>
             <div id="fleets" class="form-group">
                 <label asp-for="FleetIds" class="control-label">Fleets</label>
-                <small>Each fleet will be scored separately.</small>
+                                <a class="text-primary"
+                   data-container="body"
+                   data-toggle="popover"
+                   data-placement="top"
+                   data-trigger="focus hover"
+                   data-content="If regatta fleets have not been created, leave this blank. You may also create fleets from the regatta score page.">
+                    <span class="far fa-question-circle"></span>
+                </a><small>Each fleet will be scored separately.</small>
                 <select multiple asp-for="FleetIds" class="form-control custom-select selectpicker">
                     @foreach (var fleet in Model.FleetOptions.OrderBy(c => c.Name))
                     {
@@ -105,4 +120,9 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
+        <script>
+        $(function () {
+            $('[data-toggle="popover"]').popover()
+        })
+    </script>
 }
