--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
             <br />
             <p>SailScores is <a href="https://github.com/SailScores/SailScores#sailscores">open source</a> and volunteer driven.</p>
             <p>
-                <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> on this site for free.
+                <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> here for free.
             </p>
         </div>
     </div>
@@ -61,7 +61,7 @@
             <li>Support for Appendix A Low Point Scoring including 2021-2024 codes,
                 High Point Percentage, and customized club systems and codes.
             </li>
-            <li>Direct links to club, series, and regatta pages.</li>
+            <li>Easy to bookmark and link to club, series, and regatta results.</li>
             <li>Competitor statistics across multiple series.</li>
             <li>Count a single race in multiple series.</li>
             <li>Automatically collect and share weather information.</li>
