--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -49,17 +49,19 @@
             <hr class="d-md-none" />
             <div class="row bg-almost">
                 <div class="col-sm-4 my-2">
+                    
+                    <a asp-controller="Announcement"
+                   asp-action="Create"
+                   asp-route-regattaId="@Model.Item.Id"
+                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                   class="btn btn-outline-primary">@localizer["New Announcement"]</a>
+                </div>
+                <div class="col-sm-4 my-2">
                     <a asp-controller="Fleet"
                    asp-action="Create"
                    asp-route-regattaId="@Model.Item.Id"
                    asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
                    class="btn btn-outline-primary">@localizer["New Fleet"]</a>
-                </div>
-                <div class="col-sm-4 my-2">
-                    <a asp-controller="Competitor"
-                   asp-action="Create"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["New Competitor"]</a>
                 </div>
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Race"
@@ -71,18 +73,14 @@
             </div>
             <div class="row bg-almost">
                 <div class="col-sm-4">
-                    <a asp-controller="Announcement"
-                   asp-action="Create"
-                   asp-route-regattaId="@Model.Item.Id"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["New Announcement"]</a>
-                </div>
-                <div class="col-sm-4 my-2">
                     <a asp-controller="Regatta"
                    asp-action="Edit"
                    asp-route-Id="@Model.Item.Id"
                    asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
                    class="btn btn-outline-primary">@localizer["Edit Regatta"]</a>
+                </div>
+                <div class="col-sm-4 my-2">
+                    &nbsp;
                 </div>
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Admin"
