--- a/SailScores.Web/Views/MergeCompetitor/Done.cshtml
+++ b/SailScores.Web/Views/MergeCompetitor/Done.cshtml
@@ -25,9 +25,9 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-                <a asp-controller="Admin"
+                <a asp-controller="Competitor"
                    asp-action="Index"
-                   class="btn btn-outline-primary">Back To Admin</a>
+                   class="btn btn-outline-primary">Back To Competitors</a>
 
     </div>
 </div>
