WIP: Disable Scoring and Season Deletions

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -135,7 +135,7 @@
 <br />
 @await Html.PartialAsync("_SeriesList", Model.Series)
 <br />
-@await Html.PartialAsync("_CompetitorList", Model.Competitors)
+@await Html.PartialAsync("_CompetitorList")
 <br />
 @await Html.PartialAsync("_RaceList", Model)
 <br />
