--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<SailScores.Core.Model.Competitor>
-
-<div class="row">
+﻿<div class="row">
     <div class="col-10 col-sm-8 col-md-5 col-lg-4">
         <h3>
             <a id="competitors">Competitors</a>
