--- a/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
+++ b/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SailScores.Core.Model.ScoringSystem>
+﻿@model IEnumerable<SailScores.Web.Models.SailScores.ScoringSystemDeleteViewModel>
 <div id="scoringdiv">
 <div class="row">
     <div class="col-10 col-sm-8 col-md-5 col-lg-4">
