--- a/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
+++ b/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
@@ -22,13 +22,22 @@
     {
     <div class="row border-bottom mt-1 mb-1 pt-1 pb-1 ml-md-2">
     <div class="col-12">
-        <a class="btn btn-sm btn-outline-danger"
-            asp-action="Delete"
-            asp-controller="ScoringSystem"
-            asp-route-id="@item.Id"
-            title="Delete">
-            <span class="fas fa-trash"></span>
-        </a> &nbsp;
+        @if(!item.IsDeletable)
+		{
+			<button class="btn btn-sm btn-outline-danger disabled"
+				disabled="disabled"
+				title="Cannot be deleted: @item.PreventDeleteReason">
+			    <span class="fas fa-trash"></span>
+			</button>
+		} else {
+            <a class="btn btn-sm btn-outline-danger"
+                asp-action="Delete"
+                asp-controller="ScoringSystem"
+                asp-route-id="@item.Id"
+                title="Delete">
+                <span class="fas fa-trash"></span>
+            </a>
+        }&nbsp;
         <a class="btn btn-sm btn-outline-primary"
             asp-action="Edit"
             asp-controller="ScoringSystem"
