Regatta displays documents

--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -49,56 +49,79 @@
             <hr class="d-md-none" />
             <div class="row bg-almost">
                 <div class="col-sm-4 my-2">
-                    
-                    <a asp-controller="Announcement"
-                   asp-action="Create"
-                   asp-route-regattaId="@Model.Item.Id"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["New Announcement"]</a>
-                   
                     <a asp-controller="Document"
-                   asp-action="Create"
-                   asp-route-regattaId="@Model.Item.Id"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["New Document"]</a>
+                       asp-action="Create"
+                       asp-route-regattaId="@Model.Item.Id"
+                       asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                       class="btn btn-outline-primary">@localizer["Upload Document"]</a>
                 </div>
 
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Fleet"
-                   asp-action="Create"
-                   asp-route-regattaId="@Model.Item.Id"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["New Fleet"]</a>
+                       asp-action="Create"
+                       asp-route-regattaId="@Model.Item.Id"
+                       asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                       class="btn btn-outline-primary">@localizer["New Fleet"]</a>
                 </div>
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Race"
-                   asp-action="Create"
-                   asp-route-regattaId="@Model.Item.Id"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["New Race"]</a>
+                       asp-action="Create"
+                       asp-route-regattaId="@Model.Item.Id"
+                       asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                       class="btn btn-outline-primary">@localizer["New Race"]</a>
                 </div>
             </div>
             <div class="row bg-almost">
                 <div class="col-sm-4">
                     <a asp-controller="Regatta"
-                   asp-action="Edit"
-                   asp-route-Id="@Model.Item.Id"
-                   asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
-                   class="btn btn-outline-primary">@localizer["Edit Regatta"]</a>
+                       asp-action="Edit"
+                       asp-route-Id="@Model.Item.Id"
+                       asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                       class="btn btn-outline-primary">@localizer["Edit Regatta"]</a>
                 </div>
                 <div class="col-sm-4 my-2">
-                    &nbsp;
+                    <a asp-controller="Announcement"
+                       asp-action="Create"
+                       asp-route-regattaId="@Model.Item.Id"
+                       asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                       class="btn btn-outline-primary">@localizer["New Announcement"]</a>
                 </div>
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Admin"
-                   asp-action="Index"
-                   class="btn btn-outline-primary">@localizer["Club Admin"]</a>
+                       asp-action="Index"
+                       class="btn btn-outline-primary">@localizer["Club Admin"]</a>
                 </div>
             </div>
         }
     </div>
     <div class="col-md-6">
         <div class="row m-0 p-0">
+            @if(Model.Item.Documents != null && Model.Item.Documents.Count > 0)
+            {
+                <div class="col-12 m-0 p-0 pb-5">
+                    <h3>Regatta Documents</h3>
+                    @foreach (var document in Model.Item.Documents)
+                    {
+                        @if (Model.CanEdit)
+                        {
+                            <a class="btn btn-sm btn-outline-danger"
+                               asp-action="Delete"
+                               asp-controller="Document"
+                               asp-route-id="@document.Id"
+                               asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                               title="Delete">
+                                <span class="fas fa-trash"></span>
+                            </a>@:&nbsp;
+                        }
+                        <h4><a target="_blank" asp-action="GetDocument"
+                           asp-controller="Document"
+                           asp-route-id="@document.Id"
+                           asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
+                        >@document.Name</a></h4>
+                        <span class="small font-italic">Posted by @document.CreatedBy at @document.CreatedLocalDate.ToString("f")</span>
+                    }
+                </div>                
+            }
             @if (Model.Item.Announcements != null && Model.Item.Announcements.Count > 0)
             {
                 <div class="col-12 m-0 p-0">
