--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -2,6 +2,7 @@
 @using SailScores.Core.FlatModel
 @using SailScores.Api.Enumerations
 @using Microsoft.Extensions.Localization
+@using SailScores.Core.Services;
 @using SailScores.Web.Resources
 @using SailScores.Web.Services
 @using SailScores.Web.Services.Interfaces
@@ -190,7 +191,7 @@
                         {
 
                             <a asp-route="Competitor"
-                               asp-route-sailNumber="@(comp.CurrentSailNumber ?? comp.Name)"
+                                   asp-route-sailNumber="@(comp.CurrentSailNumber ?? UrlUtility.GetUrlName(comp.Name))"
                                asp-route-clubInitials="@ViewContext.RouteData.Values["ClubInitials"]">@comp.Name</a>
                         }
                     </th>
