--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -2,7 +2,6 @@
 @using SailScores.Core.FlatModel
 @using SailScores.Api.Enumerations
 @using Microsoft.Extensions.Localization
-@using SailScores.Core.Services;
 @using SailScores.Web.Resources
 @using SailScores.Web.Services
 @using SailScores.Web.Services.Interfaces
@@ -191,7 +190,7 @@
                         {
 
                             <a asp-route="Competitor"
-                                   asp-route-sailNumber="@(comp.CurrentSailNumber ?? UrlUtility.GetUrlName(comp.Name))"
+                                   asp-route-sailNumber="@(comp.CurrentSailNumber ?? SailScores.Core.Services.UrlUtility.GetUrlName(comp.Name))"
                                asp-route-clubInitials="@ViewContext.RouteData.Values["ClubInitials"]">@comp.Name</a>
                         }
                     </th>
